tests/errors/bytes-invalid-escape/main.pa
# An unrecognized escape sequence in a bytes literal.
def main = '\q'
